# IonSat-MFS

./: .gitignore  .meson.build.kate-swp  IonSat-FSW.kdev4  README.md  meson.build  specs.md  specs.txt  structure.md  structure.txt
.kdev4/: IonSat-FSW.kdev4
FFS/: build.sh  meson.build
FFS/ext/: meson.build
FFS/src/: FFS.cpp  FFS.h  meson.build
FFS/src/OS/: OS.h  meson.build
FFS/src/OS/FreeRTOS/: FFS_FreeRTOS.h  FreeRTOS.h  eventGroup.h  meson.build  messageBuffer.h  queueSet.h  semaphore.h  streamBuffer.h  task.h
FFS/src/OS/standard/: meson.build
FFS/src/controller/: controller.cpp  controller.h  meson.build
FFS/src/event/: event.cpp  event.h  meson.build
FFS/src/mode/: meson.build  mode.cpp  mode.h
FFS/src/module/: meson.build  module.cpp  module.h
FFS/src/module/local/: localModule.cpp  localModule.h  meson.build
FFS/src/module/remote/: meson.build  remoteModule.cpp  remoteModule.h
MFS/src/: meson.build  mfs.cpp
cross-build/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
cross-build/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-targets.json  meson-info.json
cross-build/meson-logs/: meson-log.txt
cross-build/meson-private/: cmd_line.txt
cross-compile/: meson.build
cross-compile/stm32/: meson.build  stm32.txt  stm32f429_2.ld
src/: meson.build
src/MFS/: MFS.cpp  MFS.h  meson.build  mfs.cpp  print_test.cpp
src/MFS/flightPlan/: flightPlan.cpp  flightPlan.h  meson.build
src/MFS/housekeeping/: housekeeping.cpp  housekeeping.h  meson.build
src/MFS/modes/: meson.build  modes.cpp  modes.h
src/MFS/propagation/: meson.build  propagation.cpp  propagation.h
src/MFS/subsystems/: meson.build  subsystems.h
src/MFS/subsystems/attitude/: attitude.cpp  attitude.h  meson.build
src/MFS/subsystems/communications/: communications.cpp  communications.h  meson.build
src/MFS/subsystems/power/: meson.build  power.cpp  power.h
src/MFS/subsystems/thruster/: meson.build  thruster.cpp  thruster.h
src/MFS/subsystems/thruster/propagation/: propagation.cpp  propagation.h
src/MFS/test/commcheck/: commcheck-stm32.cpp  commcheck-stm32.cpp.autosave
src/MFS/watchdog/: meson.build  watchdog.cpp  watchdog.h
src/tests/: blink_raw.cpp  blink_test.cpp  meson.build  print_test.cpp
subprojects/: CTTI.wrap  RFF.wrap  SGP4.wrap  libcsp.wrap  libopencm3.wrap
test/: meson.build
test/phys/: blink.cpp  meson.build
